--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-transition-group": "^4.4.5",
+    "swiper": "^11.0.5",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
