--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.2.0",
+    "@tanstack/react-query": "^5.17.9",
+    "@tanstack/react-query-devtools": "^5.17.8",
+    "@tanstack/react-query-next-experimental": "^5.17.9",
     "axios": "^1.6.3",
     "next": "14.0.4",
     "react": "^18",
