--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive": "^9.0.2",
     "react-transition-group": "^4.4.5",
     "swiper": "^11.0.5",
     "zustand": "^4.4.7"
