--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "@typescript-eslint/parser": "^6.18.1",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
     "sass": "^1.69.6",
     "typescript": "^5"
   },
-  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "description": "This is e commerce project",
   "main": "next.config.js",
-  "author": "",
+  "author": "D.Rabenko",
   "license": "ISC"
 }
