--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query-next-experimental": "^5.17.9",
     "axios": "^1.6.3",
     "eslint-config-next": "^14.0.4",
+    "formik": "^2.4.5",
     "next": "14.0.4",
     "prop-types": "^15.8.1",
     "react": "^18",
@@ -22,6 +23,7 @@
     "react-responsive": "^9.0.2",
     "react-transition-group": "^4.4.5",
     "swiper": "^11.0.5",
+    "yup": "^1.3.3",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
